Here's a concise commit message based on the provided diff file:
```
feat(app/utils.py): Add logging, type hints, and exception handling
fix(app/utils.py): Improve cookie file validation
feat(app/v1/models.py): Add VideoMetadataPayload and VideoMetadataResponse
feat(app/v1/models.py): Add MediaDownloadProcessPayload
feat(app/v1/routes.py): Implement video metadata endpoint
feat(app/v1/routes.py): Update download endpoint to support various qualities
```

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,15 @@
 po_token = 
+# Po-token value
 visitorData = 
-proxy =
-
-# htttps proxy such as 127.0.0.1:7071
-
 # Visit https://github.com/yt-dlp/yt-dlp/wiki/Extractors 
 # To get to know how to extract po_token and visitorData
+proxy =
+# htttps proxy such as 127.0.0.1:7071 or socks5://127.0.0.1:5000
+cookiefile =
+# Path to Youtube's cookie file formatted in netscape.
+filename_prefix =
+# text to be appended to every downloadable file
+working_directory =
+# directory for saving static contents. Defaults to pwd.
+clear_temps = 1
+# flag for controlling temporary file clearance
