feat: Add search limit configuration option

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-po_token = 
+po_token =
 # Po-token value
 visitorData = 
 # Visit https://github.com/yt-dlp/yt-dlp/wiki/Extractors 
@@ -13,3 +13,5 @@ working_directory =
 # directory for saving static contents. Defaults to pwd.
 clear_temps = 1
 # flag for controlling temporary file clearance
+search_limit = 5
+# Video search results limit
