--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,5 @@ clear_temps = 1
 # flag for controlling temporary file clearance
 search_limit = 5
 # Video search results limit
+chunk_size = 2048
+# Download chunk_size in bytes.
