feat: Add yt-dlp parameters configuration fix: Update environment variables and model patch: Refactor routes to use new configuration

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,86 @@
 po_token =
 # Po-token value
+
 visitorData = 
 # Visit https://github.com/yt-dlp/yt-dlp/wiki/Extractors 
 # To get to know how to extract po_token and visitorData
+
 proxy =
 # htttps proxy such as 127.0.0.1:7071 or socks5://127.0.0.1:5000
+
 cookiefile =
 # Path to Youtube's cookie file formatted in netscape.
+
 filename_prefix =
 # text to be appended to every downloadable file
+
 working_directory =
 # directory for saving static contents. Defaults to pwd.
+
 clear_temps = 1
 # flag for controlling temporary file clearance
+
 search_limit = 5
 # Video search results limit
-chunk_size = 2048
+
+clear_temps = 1
+# flag for controlling temporary file clearance
+
+search_limit = 10
+# Video search results limit
+
+http_chunk_size = 4096
 # Download chunk_size in bytes.
+
+updatetime = 0
+# Use the Last-modified header to set output file timestamps.
+
+# buffersize =
+# Size of download buffer in bytes.
+
+# ratelimit =
+#  Download speed limit, in bytes/sec.
+
+# throttledratelimit =
+# Assume the download is being throttled below this speed (bytes/sec)
+
+# min_filesize = 0
+# Skip files smaller than this size
+
+# max_filesize =
+# Skip files larger than this size
+
+noresizebuffer = 0
+#  Do not automatically resize the download buffer.
+
+retries = 2
+# Number of times to retry for expected network errors
+
+continuedl = 1
+# Try to continue downloads if possible.
+
+noprogress = 0
+# Do not print the progress bar
+
+nopart = 0
+# Do not use temporary .part files.
+
+verbose = 0
+# Print additional info to stdout.
+
+quiet = 0
+# Do not print messages to stdout.
+
+allow_multiple_video_streams = 0
+# Allow multiple video streams to be merged into a single file
+
+allow_multiple_audio_streams =0 
+# Allow multiple audio streams to be merged
+
+geo_bypass = 0
+#Bypass geographic restriction via faking X-Forwarded-For HTTP header
+
+# geo_bypass_country =
+# Two-letter ISO 3166-2 country code that will be used for
+# explicit geographic restriction bypassing via faking
+# X-Forwarded-For HTTP header
