feat: Add SQLite database configuration and update environment variables fix: Improve video ID extraction logic and add URL validation chore: Update dependencies and add SQLModel refactor: Extract video metadata fetching into separate function test: Add test for startup events including table creation

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+database_engine = sqlite:///db.sqlite3
+# sqlalchemy database engine
+
 po_token =
 # Po-token value
 
@@ -20,14 +23,11 @@ working_directory =
 clear_temps = 1
 # flag for controlling temporary file clearance
 
-search_limit = 5
-# Video search results limit
-
-clear_temps = 1
-# flag for controlling temporary file clearance
-
 search_limit = 10
 # Video search results limit
+
+ video_info_cache_period_in_hrs = 4
+ # Fetched video info validity period in hours
 
 http_chunk_size = 4096
 # Download chunk_size in bytes.
