--- a/.env.example
+++ b/.env.example
@@ -26,7 +26,13 @@ clear_temps = 1
 search_limit = 10
 # Video search results limit
 
- video_info_cache_period_in_hrs = 4
+### STATIC SERVER CONFIGS ####
+static_server_url = http://localhost:8080/static
+# Static server accessible endpoint
+
+####    DOWNLOAD CONFIGS ####
+
+video_info_cache_period_in_hrs = 4
  # Fetched video info validity period in hours
 
 http_chunk_size = 4096
