feat: Add static file serving functionality fix: Update config and models for static server URL option patch: Improve error handling and add validation for static server URL feat: Implement dynamic path for static files fix: Update dependencies and add new requirements patch: Refactor utils.py to handle static file paths correctly fix: Update video metadata processing to use sanitized filenames

--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,7 @@ cookiefile =
 filename_prefix =
 # text to be appended to every downloadable file
 
-working_directory =
+working_directory = static
 # directory for saving static contents. Defaults to pwd.
 
 clear_temps = 1
@@ -27,7 +27,7 @@ search_limit = 10
 # Video search results limit
 
 ### STATIC SERVER CONFIGS ####
-static_server_url = http://localhost:8080/static
+static_server_url =
 # Static server accessible endpoint
 
 ####    DOWNLOAD CONFIGS ####
