Here's a concise commit message based on the provided diff file:
feat: Add support for mp4 downloads and logging
fix: Update video metadata response structure
patch: Improve static server configuration and add default extension
chore: Update yt-dlp-bonus version and modify download process
refactor: Restructure models and routes for better organization

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,14 @@ clear_temps = 1
 search_limit = 10
 # Video search results limit
 
+default_extension = webm
+# Extension filter for downloading videos/audios
+# possible values [webm, mp4]
+# mp4 tends to have slow download speed.
+
+enable_logging = 0
+# downloader logging
+
 ### STATIC SERVER CONFIGS ####
 static_server_url =
 # Static server accessible endpoint
@@ -38,7 +46,7 @@ video_info_cache_period_in_hrs = 4
 http_chunk_size = 4096
 # Download chunk_size in bytes.
 
-updatetime = 0
+updatetime = 1
 # Use the Last-modified header to set output file timestamps.
 
 # buffersize =
