feat: Update environment variables in .env.example fix: Modify proxy handling in EnvVariables model chore: Add new exceptions in utils.py chore: Update video quality retrieval method in routes.py chore: Update requirements.txt dependencies

--- a/.env.production
+++ b/.env.production
@@ -72,19 +72,19 @@ retries = 2
 continuedl = false
 # Try to continue downloads if possible.
 
-noprogress = false
+noprogress = true
 # Do not print the progress bar
 
 nopart = false
 # Do not use temporary .part files.
 
-updatetime = true
+updatetime = false
 # Use the Last-modified header to set output file timestamps.
 
 verbose = false
 # Print additional info to stdout.
 
-quiet = false
+quiet = true
 # Do not print messages to stdout.
 
 allow_multiple_video_streams = false
