feat: Update environment variables and API configurations

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,25 @@
+
+#### API-INFO
+api_title = Youtube-Downloader
+# API title
+
+api_description = DESCRIPTION.md
+# Path to markdown file containing API description.
+
+api_terms_of_service = http://localhost:8000/terms-of-service
+# absolute url to terms of service.
+
+contact_name = YoutubeDownloader
+# Name of the person to appear on contacts section
+
+contact_email = user@localhost.dev
+# Email address of the contact_name
+
+contact_url = http://localhost:8000/user
+# URL pointing to contact_name's website
+
+
+### API CONFIGURATIONS ###########
 database_engine = sqlite:///db.sqlite3
 # sqlalchemy database engine
 
@@ -15,7 +37,7 @@ proxy =
 # htttps proxy such as 127.0.0.1:7071 or socks5://127.0.0.1:5000
 
 filename_prefix =
-# text to be appended to every downloadable file
+# text to be appended to every downloadable filename
 
 working_directory = static
 # directory for saving static contents. Defaults to pwd.
