feat: Add download_ip option to configuration fix: Update dependencies in requirements.txt patch: Modify APIRouter initialization in routes.py chore: Update model imports in app/models.py

--- a/.env.example
+++ b/.env.example
@@ -60,7 +60,10 @@ enable_logging = false
 static_server_url =
 # Static server accessible endpoint
 
-####    DOWNLOAD CONFIGS ####
+####    DOWNLOAD OPTIONS ####
+
+download_ip =
+# IP address to be shown while requesting the media file for download
 
 video_info_cache_period_in_hrs = 4
  # Fetched video info validity period in hours
