--- a/.env.production
+++ b/.env.production
@@ -62,7 +62,10 @@ static_server_url =
 
 
 
-####    DOWNLOAD CONFIGS ####
+####    DOWNLOAD OPTIONS ####
+
+download_ip =
+# IP address to be shown while requesting the media file for download
 
 video_info_cache_period_in_hrs = 4
  # Fetched video info validity period in hours
