--- a/.env.production
+++ b/.env.production
@@ -63,8 +63,9 @@ static_server_url =
 
 ####    DOWNLOAD OPTIONS ####
 
-download_ip =
-# IP address to be shown while requesting the media file for download
+default_audio_format = m4a
+# Default non-mp3 audio format
+# possible values [webm, m4a]
 
 video_info_cache_period_in_hrs = 4
  # Fetched video info validity period in hours
@@ -83,7 +84,7 @@ http_chunk_size = 4096
 
 concurrent_fragment_downloads = 1
 
-# min_filesize = false
+# min_filesize =
 # Skip files smaller than this size
 
 # max_filesize =
