feat: Remove proxy_server.py and static_server.py, refactor uwsgi.sh for multi-server support

--- a/configs/.env.example
+++ b/configs/.env.example
@@ -1,8 +1,9 @@
+
 #### API-INFO
 api_title = Youtube-Downloader
 # API title
 
-api_description = DESCRIPTION.md
+api_description = docs/DESCRIPTION.md
 # Path to markdown file containing API description.
 
 api_terms_of_service = http://localhost:8000/terms-of-service
@@ -16,7 +17,6 @@ contact_email = user@localhost.dev
 
 contact_url = http://localhost:8000/user
 # URL pointing to contact_name's website
-
 
 
 ### API CONFIGURATIONS ###########
@@ -69,10 +69,11 @@ default_audio_format = m4a
 # Default non-mp3 audio format
 # possible values [webm, m4a]
 
+
 video_info_cache_period_in_hrs = 4
  # Fetched video info validity period in hours
 
-http_chunk_size = 4096
+http_chunk_size = 1024
 # Download chunk_size in bytes.
 
 # buffersize =
@@ -101,19 +102,19 @@ retries = 3
 continuedl = false
 # Try to continue downloads if possible.
 
-noprogress = true
+noprogress = false
 # Do not print the progress bar
 
 nopart = false
 # Do not use temporary .part files.
 
-updatetime = false
+updatetime = true
 # Use the Last-modified header to set output file timestamps.
 
 verbose = false
 # Print additional info to stdout.
 
-quiet = true
+quiet = false
 # Do not print messages to stdout.
 
 allow_multiple_video_streams = false
