feat: Update project name to reflect API focus
fix: Correct LICENSE URL in FastAPI configuration

chore: Update README with web interfaces section

chore: Modify .env files to reflect API name change

--- a/configs/env/.env.example
+++ b/configs/env/.env.example
@@ -1,6 +1,6 @@
 
 #### API-INFO
-api_title = Youtube-Downloader
+api_title = Youtube-Downloader-API
 # API title
 
 api_description = docs/DESCRIPTION.md
