--- a/configs/env/.env.production
+++ b/configs/env/.env.production
@@ -1,5 +1,5 @@
 #### API-INFO
-api_title = Youtube-Downloader
+api_title = Youtube-Downloader-API
 # API title
 
 api_description = docs/DESCRIPTION.md
