--- a/sample.env
+++ b/sample.env
@@ -67,7 +67,7 @@ enable_logging = false
 
 ### STATIC SERVER CONFIGS ####
 
-static_server_url = http://69.62.84.40:9000
+static_server_url = http://69.62.84.40:8000
 # Static server accessible endpoint
 # e.g http://localhost:8888/file
 
@@ -82,7 +82,7 @@ api_base_url = http://69.62.84.40:9000
 
 ####    DOWNLOAD OPTIONS ####
 
-default_audio_format = webm
+default_audio_format = m4a
 # Default non-mp3 audio format
 # possible values [webm, m4a]
 
