--- a/sample.env
+++ b/sample.env
@@ -15,7 +15,7 @@ contact_name = YoutubeDownloader
 contact_email = user@localhost.dev
 # Email address of the contact_name
 
-contact_url = http://localhost:9000/user
+contact_url = http://localhost:8000/user
 # URL pointing to contact_name's website
 
 frontend_dir=
@@ -48,7 +48,7 @@ clear_temps = true
 search_limit = 50
 # Video search results limit
 
-default_extension = webm
+default_extension = mp4
 # Extension filter for downloading videos/audios
 # possible values [webm, mp4]
 #############################################################################
@@ -82,7 +82,7 @@ api_base_url = http://69.62.84.40:9000
 
 ####    DOWNLOAD OPTIONS ####
 
-default_audio_format = m4a
+default_audio_format = webm
 # Default non-mp3 audio format
 # possible values [webm, m4a]
 
@@ -140,7 +140,7 @@ allow_multiple_video_streams = false
 allow_multiple_audio_streams = false
 # Allow multiple audio streams to be merged
 
-geo_bypass = true
+geo_bypass = false
 #Bypass geographic restriction via faking X-Forwarded-For HTTP header
 
 # geo_bypass_country =IN
@@ -153,6 +153,6 @@ geo_bypass = true
 embed_subtitles = false
 # Embed subtitles to downloaded videos
 
-append_id_in_filename = false
+append_id_in_filename = true
 # Include the video id in its filename
 # To add uniqueness to videos with a common title.
