--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ pytest>=8.3.3
 python-dotenv==1.0.0
 fastapi[standard]==0.115.5
 yt-dlp-bonus>=0.2.5
-sqlmodel==0.0.22
+sqlmodel==0.0.27
 a2wsgi==1.10.7
-uwsgi==2.0.28
+#uwsgi>=2.0.28
 flask==3.1.0
 email-validator==2.2.0
 innertube>=2.1.16
