--- a/sample.env
+++ b/sample.env
@@ -67,7 +67,7 @@ enable_logging = false
 
 ### STATIC SERVER CONFIGS ####
 
-static_server_url = http://69.62.84.40:8000
+static_server_url = 
 # Static server accessible endpoint
 # e.g http://localhost:8888/file
 
@@ -76,7 +76,7 @@ serve_frontend_from_static_server=false
 # downloadable videos and audios
 # NOTE: This disables serving forntend-contents from the API server
 
-api_base_url = http://69.62.84.40:9000
+api_base_url = 
 # To be used for running the proxy script - url pointing to the API
 # e.g http://localhost:8000
 
